# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.240 2008/05/01 11:12:50 mpagano Exp $

*git-sources-2.6.25-r17 (01 May 2008)

  01 May 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r17.ebuild:
  Version bump

*git-sources-2.6.25-r16 (30 Apr 2008)

  30 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r16.ebuild:
  Version bump

*git-sources-2.6.25-r15 (30 Apr 2008)

  30 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r14.ebuild, +git-sources-2.6.25-r15.ebuild:
  Version bump

*git-sources-2.6.25-r14 (29 Apr 2008)

  29 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r14.ebuild:
  Version bump

*git-sources-2.6.25-r13 (29 Apr 2008)

  29 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r13.ebuild:
  Version bump

*git-sources-2.6.25-r12 (28 Apr 2008)

  28 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r12.ebuild:
  Version bump

*git-sources-2.6.25-r11 (27 Apr 2008)

  27 Apr 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r11.ebuild:
  Version bump

*git-sources-2.6.25-r10 (27 Apr 2008)

  27 Apr 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r10.ebuild:
  Version bump

*git-sources-2.6.25-r9 (27 Apr 2008)

  27 Apr 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r9.ebuild:
  Version bump

*git-sources-2.6.25-r8 (26 Apr 2008)

  26 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r8.ebuild:
  Version bump

*git-sources-2.6.25-r7 (25 Apr 2008)

  25 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r7.ebuild:
  Version bump

*git-sources-2.6.25-r6 (24 Apr 2008)

  24 Apr 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25-r6.ebuild:
  Version bump

*git-sources-2.6.25-r5 (24 Apr 2008)

  24 Apr 2008; Mike Pagano <mpagano@gentoo.org>