@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.240 2008/05/01 11:12:50 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.241 2008/05/01 23:35:17 mpagano Exp $
+
+*git-sources-2.6.25-r18 (01 May 2008)
+
+  01 May 2008; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.25-r18.ebuild:
+  Version bump
 
 *git-sources-2.6.25-r17 (01 May 2008)
 
